--- a/coupon-master/src/index.html
+++ b/coupon-master/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Angular Getting Started</title>
+    <title>Get Coupons</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,6 +14,15 @@
   </head>
   <body>
     <app-root></app-root>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <main id="container"></main>
+    <script type="text/javascript">
+      window.onload = () => {
+        //window.renderCoupon('container');
+      };
+    </script>
   </body>
 </html>
 
